2007-10-09  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/Makefile.am: update
	* src/gen/db/Makefile.am: update
	* src/gen/lib/primaryobj.py: remove MarkupText dependency
	* src/Makefile.am: remove RelLib
	* po/POTFILES.in: update

2007-10-09  Alex Roitman  <shura@gramps-project.org>
	* configure.in: remove obsolete RelLib/Makefile.in

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/gen/db/base.py: allow not to create gramps_id on add
	* src/GrampsDbUtils/_ReadXML.py: on sourceref, don't create gramps_id
	* src/GrampsDb/_GrampsInMemDB.py: remove gid from memory map only if not None

2007-10-09 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/GrampsDb/_GrampsInMemDB.py: correctly store global name grouping
	* src/GrampsDb/_GrampsBSDDB.py: correctly store global name grouping
	* src/gen/lib/name.py: allow grouping equal to surname
	* src/Editors/_EditName.py: correct handling of name grouping, issue #647

2007-10-08  Don Allingham  <don@gramps-project.org>
	* various: cleanup

2007-10-08  Don Allingham  <don@gramps-project.org>
	* src/gen/lib/note.py: make independent of MarkupText.py

2007-10-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDbUtils/_WriteGedcom.py (__submitter): Remove old usage.
	* src/GrampsDbUtils/_ReadXML.py (stop_research): Remove old usage.
	* src/GrampsCfg.py (get_researcher): Remove old usage.
	* src/gen/db/dbdir.py (__close_metadata): Store tuple;
	(_load_metadata): Load from tuple;
	* src/gen/db/base.py (GrampsDbBase.set_researcher): Move details
	to the Researcher class.
	* src/gen/lib/researcher.py (serialize, unserialize): Add methods; 
	(set_from): Add method;
	(set, get): Remove methods.
	(__init__): Copy from source if provided.

2007-10-08  Don Allingham  <don@gramps-project.org>
	* src/gen/lib/attrbase.py: renamed from attributeBase.py

2007-10-08  Don Allingham  <don@gramps-project.org>
	* various: gen.lib integration. probably touches almost every file
